--- a/client-app/package.json
+++ b/client-app/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.2",
